2007-02-16  Andrew Cagney  <cagney@redhat.com>

	* frysk-common.ac: Add call to FRYSK_DO_ARCH32_TEST.

2007-02-16  Mark Wielaard  <mark@klomp.org>

	* frysk-common.ac (HAVE_ECJ): Only enable when gcj doesn't support
	-fsource=1.4.

2007-02-15  Nurdin Premji  <npremji@redhat.com>

	* Makefile.rules (SUFFIXES.mkenum): Fixed typo so enums get built.

2007-02-14  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (files-java.list): Add JUnitTests.java.
	($(GEN_SOURCENAME)/Build.java): Delete rule.
	(checked-ecj-compile): Convert GEN_SOURCEPATH into a list of jar
	files and pass that.
	(CLEANFILES): Add files-java-gen.list

	* Makefile.rules (GEN_CLASSPATH, GEN_SOURCEPATH): Add
	descriptions.
	(checked-ecj-compile): Simplify, clarify that no generated files
	are checked.
	
2007-02-14  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (.DEFAULT): Provide a default rule that ignores
	missing files.

2007-02-14  Stepan Kasal  <skasal@redhat.com>

	* m4/frysk_pkg_module_variable.m4: Improve woring.

2007-02-12  Andrew Cagney  <cagney@redhat.com>

	* Makefile.gen.sh (files.list): Limit assembly files to just *dir/
	and cni/ directories.
	(.S, .s): Merge handling with .cxx.
	(echo_arch32_PROGRAMS): Handle .S and .cxx differences locally.
	
2007-02-07  Stan Cox  <scox@redhat.com>

	* Makefile.rules (checked-ecj-compile): Build *.class files for
	generated *.java with nowarn.

2007-02-06  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (checked-for-java-util-hashtable): New rule, do
	not enable.

2007-02-06  Stepan Kasal  <skasal@redhat.com>

	* Makefile.gen.sh (_DATA): Use "dist_${dir}_DATA" or
	"nodist_${dir}_DATA" as needed.
	(set_variable): New function.

2007-02-06  Andrew Cagney  <cagney@redhat.com>

	* Makefile.rules (AM_CCASFLAGS): Define.

2007-02-06  Stepan Kasal  <skasal@redhat.com>

	* Makefile.gen.sh (files.list): Do include "*.desktop" and
	"*.properties" in the list again.

	* Makefile.gen.sh (files.list): Do not include "*.properties" files